--- a/website/pages/playground/index.mdx
+++ b/website/pages/playground/index.mdx
@@ -1,1 +1,4 @@
-<meta http-equiv="refresh" content="0; url=https://stackblitz.com/github/samchon/nestia-template?file=src%2Fcontrollers%2FBbsArticlesController.ts&file=src%2Fapi%2Ffunctional%2Fbbs%2Farticles%2Findex.ts,test%2Ffeatures%2Fapi%2Fbbs%2Ftest_api_bbs_article_store.ts&view=editor" />
+<meta
+  http-equiv="refresh"
+  content="0; url=https://stackblitz.com/github/samchon/nestia-start?file=README.md&view=editor"
+/>
